2006-05-07  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR classpath/27311:
	* gnu/java/text/StringFormatBuffer.java:
	(toString()): Implemented so we can see the contents.
	* java/text/DecimalFormat.java:
	(formatInternal(double,StringFormatBuffer,FieldPosition)):
	Don't calculate the exponent when the number is 0 or less.
	Also, use log10 instead of log now it's available.

2006-05-07  Sven de Marothy <sven@physto.se>

	Fixed PR27455
	* gnu/java/awt/peer/GLightweightPeer.java (mouseEntered): Remove.
	* java/awt/Component.java (processMouseEvent): 
	Do lightweight cursor handling.
	* javax/swing/plaf/basic/BasicTableHeaderUI.java 
	(endResizing,mouseMoved): Save and reset original cursor, not the 
	default one.

2006-05-07  Roman Kennke <kennke@aicas.com>

	* gnu/java/awt/java2d/RasterGraphics.java: New file.

2006-05-07  Roman Kennke <kennke@aicas.com>

	* gnu/java/awt/java2d/AbstractGraphics2D.java
	(fillShape): Determine user space bounds of shape and feed them
	into the actual rendering pipeline.
	(rawSetPixel): Made non-abstract for now. Maybe remove later.
	(rawSetForeground): Likewise.
	(getDestinationColorModel): Removed.
	(getDeviceBounds): Made non-abstract. Provide useful default impl.
	(rawFillShape): Handle paint context.
	(fillScanline): Implement painting and compositing.
	(fillShapeAntialias): Handle paint context.
	(fillScanlineAA): Implemented preliminary antialiasing based on
	composite context. Not working yet.
	(fillScanlineAlpha): Removed.
	(init): Fetch destination raster.
	(getDestinationRaster): New abstract method.
	(updateRaster): New backend method.

2006-05-07  Roman Kennke <kennke@aicas.com>

	* gnu/java/awt/java2d/AlphaCompositeContext.java
	(compose): Fixed loops, conditions and logic to make compositing
	work correctly.

2006-05-05  Roman Kennke <kennke@aicas.com>

	* java/awt/image/ColorModel.java
	(getNormalizedComponents): Implemented.

2006-05-05  Roman Kennke <kennke@aicas.com>
